--- a/Home.html
+++ b/Home.html
@@ -59,8 +59,8 @@
                     <i class="fas fa-share"></i> <span id="share">Share</span> 
                 </div>
                 <div id="blog-info">
-                    <h3>Blog Cards</h3>
-                    <p>31 Dec 2019</p>
+                    <h3>User Cards</h3>
+                    <p>11 Jul 2018</p>
                 </div>
                 <div id="button-nav">
                     <div class="btn btn-default bn">blog</div >
