--- a/Home.html
+++ b/Home.html
@@ -68,6 +68,9 @@
                     <div class="btn btn-default bn">article</div >
                     <div class="btn btn-default bn">thumbnail</div >
                 </div>
+                <a href="#" class="float btn btn-default">
+                    Stay Inspired</i>
+                    </a>
             </section>
         
 
