--- a/Home.html
+++ b/Home.html
@@ -12,10 +12,11 @@
 </head>
 
 <body>
-    <div class="container-fluid"  id="body-container">
-     <header>
+
+    <header class="container-fluid"  id="body-container">
         <nav class="navbar navbar-expand-lg navbar-light navbar-floating bg-white fixed-top nav-shadow" >
-            <a href="#" class="navbar-brand">            <img src="/Images/uidesigndaily-logo.svg" alt=""  >
+            <a href="#" class="navbar-brand">
+                <img src="/Images/uidesigndaily-logo.svg" alt="UI Design Daily"  >
             </a>
         </a>
         <button class="navbar-toggler" style="outline: none;" type="button" data-toggle="collapse" data-target="#navbarBtns" aria-controls="navbarBtns" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,16 +33,15 @@
 
             </div>
         </nav>
-     </div>
     </header>   
+ 
 
-    <!-- Main -->
-    <div id="main">
+    <Main id="main">
         <!-- Sketch Section -->
         <div id="sketch">
             <div>
                 <div id="sketch-content">
-                    <span class="float-right btn btn-default" style="background-color: white; margin: 20px; border-radius: 30px;"><i class="fab fa-sketch" style="color: chocolate; "></i> Sketch</span>                    
+                    <span class="float-right btn btn-default sketch-button" ><i class="fab fa-sketch" style="color: chocolate; "></i> Sketch</span>                    
                     <div>                        
                         <img src="/Images/day_997.png" alt="Sketch" width="100%" style="border-radius: 5px;">
                     </div>
@@ -105,7 +105,26 @@
             </section>
         </div>
 
-    </div>
+        
+        <div>
+            <a id="base-button" href="#" class="float btn btn-default">
+                Stay Inspired
+                </a>
+                <div id="pop-up" class="card label-container" style="width: 18rem;">
+                    <p><em>work in progress....</em></p>
+                </div>
+            <!-- <a id="base-button" href="#" class="float btn btn-default">
+                Stay Inspired
+            </a>
+            <div id="pop-up" class="card label-container" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div> -->
+        </div>
+
+    </Main>
 
   
 
